# fecrs

./: CMakeLists.txt  README.markdown
doc/: do-cmake  do-trilinos-cmake
src/: CMakeLists.txt  fecrs_unit_tests.cpp  main.cpp  typeinfo.hpp
